Gradient fix on safari (On safari-browser this area was darker than on other brosers)

--- a/src/app/components/shared/project-card/project-card.component.scss
+++ b/src/app/components/shared/project-card/project-card.component.scss
@@ -11,7 +11,8 @@ section {
     #firstElement {
         width: 15rem;
         height: 100%;
-        background: linear-gradient(white 30%, white, rgba(0, 0, 0, 0.05));
+        background: linear-gradient(white 30%, white, rgb(224, 224, 224));
+        background-image: -webkit-linear-gradient(white 30%, white, rgb(224, 224, 224));
         display: flex;
         align-items: center;
         justify-content: center;
